# lightsocks

./: CMakeLists.txt  LICENSE  README.md
cmake/: cppnet.cmake
include/encrypt/: encrypt.h  encrypt_base.h  encrypt_rc4.h
include/local/: local.h  socks5.h
include/server/: server.h
src/: CMakeLists.txt
src/encrypt/: encrypt.cpp  encrypt_base.cpp  encrypt_rc4.cpp
src/local/: local.cpp  socks5.cpp  sslocal.cpp
src/server/: server.cpp  ssserver.cpp
